--- a/app/partials/gig-detail.html
+++ b/app/partials/gig-detail.html
@@ -11,29 +11,30 @@
             {{gig.startDate | date:'MMM y' }} to <span ng-hide="isOverWith()">{{gig.endDate | date:'MMM y' }}</span><span ng-hide="!isOverWith()">present</span>
         </div>
     </div>
-    <div class="btn btn-primary btn-mini methodology">methodology: {{gig.methodology}}</div>
 
     <div class="main lead">
 
         <p ng-show="!contributed(gig)" class="blurb">{{gig.blurb}}</p>
 
+        <div ng-show="contributed(gig)" class="btn btn-success disabled">Key Contributions:</div>
         <dl ng-show="contributed(gig)" class="contributions">
-            <dt>Key contributions:</dt>
             <dd ng-repeat="contrib in gig.contributions">
-                <div>{{$index + 1}}. {{contrib.name}}</div>
-                <div>{{contrib.description}}</div>
+                <span class="foo">{{contrib.name}}:</span>
+                <span>{{contrib.description}}</span>
             </dd>
         </dl>
 
+        <div ng-show="lead()" class="btn btn-success disabled">Leadership:</div>
         <dl ng-show="lead()" class="leadership">
-            <dt class="heading">Leadership:</dt>
-            <dd ng-repeat="leadership in gig.leadership">{{$index + 1}}. {{leadership}}</dd>
+            <dd ng-repeat="leadership in gig.leadership">{{$index+1}}. {{leadership}}</dd>
         </dl>
 
+        <div ng-show="sdlc()" class="btn btn-success disabled">SDLC Process:</div>
         <p ng-show="sdlc()" class="sdlcProcess">
             {{gig.sdlcProcess}}
         </p>
 
+        <div ng-show="team()" class="btn btn-success disabled">Team:</div>
         <p ng-show="team()" class="team">
             {{gig.team}}
         </p>
