adding a resume file

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -1,8 +1,11 @@
 <div class="row-fluid lead" style="margin-top:3em;">
 
     <p>
-        Resume requests and contact info available upon request. I am currently available for new opportunities
-        beginning January 2013.
+        I am currently available for new opportunities beginning early November 2013.
+    </p>
+
+    <p>
+       Resume is <a href="/app/static/JasonNerothin.pdf">here</a>.
     </p>
 
     <p>
